--- a/web_app.html
+++ b/web_app.html
@@ -249,7 +249,7 @@
             border: 4px solid rgba(102, 126, 234, 0.5);
             cursor: pointer;
             box-shadow: 0 15px 50px rgba(102, 126, 234, 0.5);
-            transition: all 0.2s ease;
+            transition: transform 0.2s ease;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -272,22 +272,8 @@
             }
         }
 
-        .tap-button::before {
-            content: '';
-            position: absolute;
-            inset: -10px;
-            border-radius: 50%;
-            background: linear-gradient(135deg, #667eea, #764ba2, #f093fb);
-            opacity: 0;
-            transition: opacity 0.3s;
-        }
-
         .tap-button:active {
             transform: scale(0.95);
-        }
-
-        .tap-button:not(:active)::before {
-            opacity: 0.2;
         }
 
         /* Offline Income Notice */
@@ -1098,7 +1084,7 @@
             document.getElementById('automationList').innerHTML = automationHtml;
 
             const energyHtml = shopItems.energy.map(item => `
-                <div class="item" onclick="buyItem('energy', ${item.amount}, ${item.price})">
+                <div class="item" onclick="buyEnergy(${item.amount}, ${item.price})">
                     <div class="item-info">
                         <div class="item-emoji">${item.emoji}</div>
                         <div class="item-details">
@@ -1126,7 +1112,45 @@
         }
 
         function buyItem(type, id, price) {
-            tg.showAlert('🚧 Покупки будут добавлены в следующем обновлении');
+            fetch('/api/buy', {
+                method: 'POST',
+                headers: {'Content-Type': 'application/json'},
+                body: JSON.stringify({user_id: user?.id, item_type: id, price: price})
+            })
+            .then(res => res.json())
+            .then(data => {
+                if (data.success) {
+                    tg.showAlert('✅ Покупка успешна!');
+                    loadData();
+                    renderShop();
+                } else {
+                    tg.showAlert('⚠️ ' + data.error);
+                }
+            })
+            .catch(err => {
+                tg.showAlert('❌ Ошибка покупки');
+            });
+        }
+
+        function buyEnergy(amount, price) {
+            fetch('/api/buy_energy', {
+                method: 'POST',
+                headers: {'Content-Type': 'application/json'},
+                body: JSON.stringify({user_id: user?.id, amount: amount, price: price})
+            })
+            .then(res => res.json())
+            .then(data => {
+                if (data.success) {
+                    tg.showAlert('✅ Энергия куплена!');
+                    loadData();
+                    renderShop();
+                } else {
+                    tg.showAlert('⚠️ ' + data.error);
+                }
+            })
+            .catch(err => {
+                tg.showAlert('❌ Ошибка покупки');
+            });
         }
 
         function openMining(e) {
