--- a/web_app.html
+++ b/web_app.html
@@ -244,21 +244,23 @@
             width: 220px;
             height: 220px;
             margin: 30px auto;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 50%, #f093fb 100%);
-            border-radius: 50%;
-            border: 4px solid rgba(102, 126, 234, 0.5);
+            background-image: url('http://unlock-rent.ru/tap.png');
+            background-size: contain;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-color: transparent;
+            border: none;
             cursor: pointer;
-            box-shadow: 0 15px 50px rgba(102, 126, 234, 0.5);
+            box-shadow: 0 15px 50px rgba(102, 126, 234, 0.3);
             transition: transform 0.2s ease;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 90px;
             user-select: none;
             -webkit-tap-highlight-color: transparent;
             -webkit-touch-callout: none;
             position: relative;
             animation: pulse 2s ease-in-out infinite;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
         }
 
         @keyframes pulse {
@@ -785,9 +787,7 @@
             </div>
         </div>
 
-        <div class="tap-button" onclick="tap()">
-            ⚛️
-        </div>
+        <div class="tap-button" onclick="tap()"></div>
 
 
         <div class="buttons">
