--- a/admin.html
+++ b/admin.html
@@ -124,17 +124,35 @@
         }
 
         .login-container {
-            max-width: 600px;
-            margin: 120px auto;
-            background: var(--card-bg);
-            backdrop-filter: blur(40px);
-            border: 3px solid var(--border);
-            border-radius: 40px;
-            padding: 80px 70px;
-            box-shadow: 0 50px 150px rgba(0, 0, 0, 0.9);
-            animation: slideIn 1s ease;
+            max-width: 550px;
+            margin: 100px auto;
+            background: linear-gradient(135deg, rgba(15, 23, 42, 0.98) 0%, rgba(30, 41, 59, 0.98) 100%);
+            backdrop-filter: blur(50px);
+            border: 2px solid transparent;
+            border-radius: 32px;
+            padding: 60px 50px;
+            box-shadow: 0 30px 100px rgba(0, 0, 0, 0.8),
+                        0 0 80px rgba(102, 126, 234, 0.3),
+                        inset 0 0 60px rgba(102, 126, 234, 0.1);
+            animation: slideIn 0.8s ease;
             position: relative;
             overflow: hidden;
+        }
+
+        .login-container::after {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: linear-gradient(45deg, 
+                transparent 0%,
+                rgba(102, 126, 234, 0.1) 25%,
+                transparent 50%,
+                rgba(118, 75, 162, 0.1) 75%,
+                transparent 100%);
+            animation: shimmer 6s infinite;
         }
 
         .login-container::before {
@@ -149,16 +167,27 @@
         }
 
         .login-title {
-            font-size: 64px;
+            font-size: 48px;
             text-align: center;
-            margin-bottom: 60px;
+            margin-bottom: 50px;
             background: linear-gradient(135deg, var(--primary), var(--secondary), var(--accent));
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
             animation: pulse 2s infinite;
             font-weight: 900;
-            text-shadow: 0 0 40px rgba(102, 126, 234, 0.5);
+            position: relative;
+            z-index: 1;
+        }
+
+        .login-subtitle {
+            text-align: center;
+            font-size: 16px;
+            opacity: 0.7;
+            margin-bottom: 40px;
+            font-weight: 500;
+            position: relative;
+            z-index: 1;
         }
 
         .form-group {
@@ -175,36 +204,46 @@
 
         .form-group input {
             width: 100%;
-            padding: 24px;
-            background: rgba(255, 255, 255, 0.1);
-            border: 3px solid var(--border);
-            border-radius: 22px;
+            padding: 18px 24px;
+            background: rgba(255, 255, 255, 0.08);
+            border: 2px solid rgba(102, 126, 234, 0.3);
+            border-radius: 16px;
             color: white;
-            font-size: 20px;
+            font-size: 16px;
             transition: all 0.3s;
+            position: relative;
+            z-index: 1;
+        }
+
+        .form-group input::placeholder {
+            color: rgba(255, 255, 255, 0.4);
         }
 
         .form-group input:focus {
             outline: none;
             border-color: var(--primary);
-            background: rgba(255, 255, 255, 0.15);
-            box-shadow: 0 0 0 10px rgba(102, 126, 234, 0.4), 0 0 60px rgba(102, 126, 234, 0.6);
+            background: rgba(255, 255, 255, 0.12);
+            box-shadow: 0 0 0 4px rgba(102, 126, 234, 0.2), 
+                        0 4px 20px rgba(102, 126, 234, 0.3),
+                        inset 0 2px 10px rgba(102, 126, 234, 0.1);
+            transform: translateY(-2px);
         }
 
         .btn-login {
             width: 100%;
-            padding: 24px;
+            padding: 18px;
             background: linear-gradient(135deg, var(--primary), var(--secondary));
             border: none;
-            border-radius: 22px;
+            border-radius: 16px;
             color: white;
-            font-size: 22px;
-            font-weight: bold;
+            font-size: 18px;
+            font-weight: 700;
             cursor: pointer;
             transition: all 0.3s;
             position: relative;
             overflow: hidden;
-            box-shadow: 0 15px 60px rgba(102, 126, 234, 0.6);
+            box-shadow: 0 8px 30px rgba(102, 126, 234, 0.4),
+                        0 0 30px rgba(102, 126, 234, 0.2);
         }
 
         .btn-login::before {
