--- a/admin.html
+++ b/admin.html
@@ -47,55 +47,61 @@
         .container { max-width: 1800px; margin: 0 auto; position: relative; z-index: 1; }
         
         .login-container {
-            max-width: 380px; margin: 80px auto;
-            background: linear-gradient(135deg, rgba(30, 41, 59, 0.95), rgba(15, 23, 42, 0.95));
-            backdrop-filter: blur(30px); border: 2px solid transparent;
-            background-image: linear-gradient(var(--card), var(--card)),
-                              linear-gradient(135deg, var(--primary), var(--secondary), var(--accent));
-            background-origin: border-box; background-clip: padding-box, border-box;
-            border-radius: 28px; padding: 45px 38px;
-            box-shadow: 0 25px 80px rgba(139, 92, 246, 0.3),
-                        0 0 100px rgba(139, 92, 246, 0.1),
-                        inset 0 0 60px rgba(139, 92, 246, 0.05);
+            max-width: 420px; margin: 80px auto;
+            background: rgba(30, 41, 59, 0.98);
+            backdrop-filter: blur(30px); border: 2px solid rgba(139, 92, 246, 0.5);
+            border-radius: 28px; padding: 50px 40px;
+            box-shadow: 0 25px 80px rgba(139, 92, 246, 0.4),
+                        0 0 100px rgba(139, 92, 246, 0.2);
             animation: float 0.6s;
             position: relative; overflow: hidden;
         }
         .login-container::before {
             content: ''; position: absolute; top: -200%; left: -200%;
             width: 400%; height: 400%;
-            background: linear-gradient(45deg, transparent, rgba(139, 92, 246, 0.1), transparent);
+            background: linear-gradient(45deg, transparent, rgba(139, 92, 246, 0.15), transparent);
             animation: shine 8s infinite;
         }
         @keyframes shine {
             0% { transform: translate(-50%, -50%) rotate(0deg); }
             100% { transform: translate(-50%, -50%) rotate(360deg); }
         }
+        .login-title {
+            font-size: 36px; text-align: center; margin-bottom: 30px;
+            font-weight: 900; color: #fff;
+            text-shadow: 0 0 20px rgba(139, 92, 246, 0.8),
+                         0 0 40px rgba(139, 92, 246, 0.5);
+            letter-spacing: -1px;
+        }
         .login-icon {
-            font-size: 64px; margin: 0 auto 25px; display: block;
-            background: linear-gradient(135deg, #8b5cf6, #6366f1, #a78bfa);
-            -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-            animation: glow 3s infinite; filter: drop-shadow(0 0 30px rgba(139, 92, 246, 0.5));
+            font-size: 72px; margin: 0 auto 30px; display: block;
+            text-align: center; color: #fff;
+            filter: drop-shadow(0 0 20px rgba(139, 92, 246, 0.9))
+                    drop-shadow(0 0 40px rgba(139, 92, 246, 0.5));
+            animation: glow 3s infinite;
         }
-        .form-group { margin-bottom: 22px; position: relative; z-index: 1; }
+        .form-group { margin-bottom: 24px; position: relative; z-index: 1; }
         .form-group input {
-            width: 100%; padding: 16px 20px; background: rgba(255, 255, 255, 0.05);
-            border: 2px solid rgba(99, 102, 241, 0.3); border-radius: 16px;
-            color: #fff; font-size: 16px; transition: all 0.4s;
+            width: 100%; padding: 18px 22px; background: rgba(15, 23, 42, 0.8);
+            border: 2px solid rgba(99, 102, 241, 0.4); border-radius: 16px;
+            color: #fff; font-size: 17px; transition: all 0.4s;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
         }
-        .form-group input::placeholder { color: transparent; }
+        .form-group input::placeholder { color: rgba(255, 255, 255, 0.3); }
         .form-group input:focus {
-            outline: none; border-color: var(--primary);
-            background: rgba(99, 102, 241, 0.12);
-            box-shadow: 0 0 0 5px rgba(99, 102, 241, 0.15),
-                        0 0 40px rgba(139, 92, 246, 0.3);
+            outline: none; border-color: rgba(139, 92, 246, 0.8);
+            background: rgba(15, 23, 42, 0.9);
+            box-shadow: 0 0 0 5px rgba(139, 92, 246, 0.2),
+                        0 0 40px rgba(139, 92, 246, 0.5);
             transform: translateY(-2px);
         }
         .btn {
-            width: 100%; padding: 18px; border: none; border-radius: 16px;
-            background: linear-gradient(135deg, var(--primary), var(--secondary));
-            color: white; font-weight: 700; font-size: 16px; cursor: pointer;
+            width: 100%; padding: 20px; border: none; border-radius: 16px;
+            background: linear-gradient(135deg, #8b5cf6, #6366f1);
+            color: white; font-weight: 800; font-size: 17px; cursor: pointer;
             transition: all 0.4s; position: relative; overflow: hidden;
-            box-shadow: 0 8px 30px rgba(139, 92, 246, 0.4);
+            box-shadow: 0 8px 30px rgba(139, 92, 246, 0.5),
+                        0 0 60px rgba(139, 92, 246, 0.3);
         }
         .btn::before {
             content: ''; position: absolute; top: 50%; left: 50%;
@@ -103,7 +109,11 @@
             transform: translate(-50%, -50%); transition: width 0.6s, height 0.6s;
         }
         .btn:hover::before { width: 400px; height: 400px; }
-        .btn:hover { transform: translateY(-4px); box-shadow: 0 12px 40px rgba(139, 92, 246, 0.5); }
+        .btn:hover {
+            transform: translateY(-4px);
+            box-shadow: 0 12px 50px rgba(139, 92, 246, 0.6),
+                        0 0 80px rgba(139, 92, 246, 0.4);
+        }
         
         .header {
             background: var(--card); backdrop-filter: blur(25px); border: 1px solid var(--border);
@@ -329,13 +339,14 @@
     <div class="container">
         <div id="loginForm" class="login-container">
             <div class="login-icon">⚛️</div>
+            <div class="login-title">Quantum Nexus</div>
             <div class="form-group">
-                <input type="text" id="login" autocomplete="off">
+                <input type="text" id="login" placeholder="Login" autocomplete="username">
             </div>
             <div class="form-group">
-                <input type="password" id="password" autocomplete="off">
+                <input type="password" id="password" placeholder="Password" autocomplete="current-password">
             </div>
-            <button class="btn" onclick="login()">Войти</button>
+            <button class="btn" onclick="login()">🚀 Войти</button>
         </div>
 
         <div id="adminPanel" class="admin-panel hidden container">
@@ -409,8 +420,8 @@
         function openQuickEdit(uid,field,title){quickEditData={userId:uid,field};document.getElementById('modalTitle').textContent=title;document.getElementById('modalInput').value='';document.getElementById('quickEditModal').classList.add('active');}
         function closeModal(){document.getElementById('quickEditModal').classList.remove('active');quickEditData=null;}
         function confirmQuickEdit(){if(!quickEditData)return;const v=parseFloat(document.getElementById('modalInput').value);if(isNaN(v)){showNotification('❌ Введите значение','error');return;}modifyUser(quickEditData.userId,`set_${quickEditData.field}`,v);closeModal();}
-        window.addEventListener('load',()=>{createParticles();addLog('Система загружена','success');if(localStorage.getItem('admin_logged_in')==='true')initPanel();});
-        function login(){const l=document.getElementById('login').value,p=document.getElementById('password').value;if(l===ADMIN_LOGIN&&p===ADMIN_PASSWORD){localStorage.setItem('admin_logged_in','true');document.getElementById('loginForm').classList.add('hidden');document.getElementById('adminPanel').classList.remove('hidden');initPanel();addLog('Вход выполнен','success');showNotification('✅ Добро пожаловать','success');}else{showNotification('❌ Неверно','error');addLog('Ошибка входа','error');}}
+        window.addEventListener('load',()=>{createParticles();addLog('Система загружена','success');if(localStorage.getItem('admin_logged_in')==='true'){document.getElementById('loginForm').classList.add('hidden');document.getElementById('adminPanel').classList.remove('hidden');initPanel();}});
+        function login(){const l=document.getElementById('login')?.value,p=document.getElementById('password')?.value;if(!l||!p){showNotification('❌ Заполните все поля','error');return;}if(l===ADMIN_LOGIN&&p===ADMIN_PASSWORD){localStorage.setItem('admin_logged_in','true');document.getElementById('loginForm').classList.add('hidden');document.getElementById('adminPanel').classList.remove('hidden');initPanel();addLog('Вход выполнен','success');showNotification('✅ Добро пожаловать','success');}else{showNotification('❌ Неверный логин или пароль','error');addLog('Ошибка входа','error');}}
         function logout(){localStorage.removeItem('admin_logged_in');document.getElementById('loginForm').classList.remove('hidden');document.getElementById('adminPanel').classList.add('hidden');addLog('Выход','info');}
         function refreshAll(){loadDashboard();if(localStorage.getItem('active_tab')==='users')loadUsers();showNotification('🔄 Обновлено','success');}
         function exportData(){const data=JSON.stringify(window.allUsers||[],null,2);const blob=new Blob([data],{type:'application/json'});const url=URL.createObjectURL(blob);const a=document.createElement('a');a.href=url;a.download='users_export.json';a.click();showNotification('📥 Экспорт данных','success');}
@@ -435,7 +446,7 @@
         function loadSecurity(){document.getElementById('content').innerHTML='<h2 style="font-size:22px;margin-bottom:18px;color:#fff;font-weight:800;">🔒 Безопасность</h2><div class="stat-card"><span class="stat-icon">🔒</span><div class="stat-label">Безопасность</div><div class="stat-value" style="font-size:18px;margin-top:10px;">В разработке</div></div>';}
         function loadTools(){document.getElementById('content').innerHTML='<h2 style="font-size:22px;margin-bottom:18px;color:#fff;font-weight:800;">🛠️ Инструменты</h2><div class="stat-card"><span class="stat-icon">🛠️</span><div class="stat-label">Инструменты</div><div class="stat-value" style="font-size:18px;margin-top:10px;">В разработке</div></div>';}
         function formatNumber(n){return Math.floor(n||0).toLocaleString('ru');}
-        document.getElementById('password')?.addEventListener('keypress',e=>{if(e.key==='Enter')login();});
+        window.addEventListener('DOMContentLoaded',()=>{const loginInput=document.getElementById('login');const passInput=document.getElementById('password');if(loginInput){loginInput.addEventListener('keypress',e=>{if(e.key==='Enter'){e.preventDefault();document.getElementById('password').focus();}});}if(passInput){passInput.addEventListener('keypress',e=>{if(e.key==='Enter'){e.preventDefault();login();}});}});
     </script>
 </body>
 </html>
